--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
             height: 100vh;
         }
 
+        /* canvas{
+            background-color:red
+        } */
+
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
 
     <!-- TODO
-    1. setup project
+    1. setup project files and canvas
     2. player
     3. gravity
     4. movement
