--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             height: 100vh;
         }
 
-        /* canvas{
-            background-color:red
-        } */
+        canvas{
+            background-color:white
+        }
 
     </style>
 </head>
@@ -47,8 +47,8 @@
     
     <script type="module" src="main.js"></script>
     <script type="module" src="player.js"></script>
-    <script type="module" src="move.js"></script>
     <script type="module" src="animate.js"></script>
+    <script type="module" src="move.js"></script>
     <script type="module" src="bgs.js"></script>
     <script type="module" src="goomba.js"></script>
 </body>
