--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     3. gravity
     4. movement
     5. platforms
-    6. background
+    6. scroll platforms
     7. win
     8. image platforms
     9. parallax scroll
