--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     5. platforms
     6. scroll platforms  V
     7. win
-    8. image platforms
+    8. image platforms V
     9. parallax scroll
     10. lose
     11. create level
