--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     6. scroll platforms  V
     7. win
     8. image platforms V
-    9. parallax scroll
+    9. parallax scroll  V
     10. lose
     11. create level
     12. fix bugs
