--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
     11. create level
     12. fix bugs
     13. player sprite -->
+    <!-- 14. enemy goomba -->
     
     <script type="module" src="main.js"></script>
-    <script type="module" src="player.js"></script>
+    <!-- <script type="module" src="player.js"></script> -->
+    <script type="module" src="player1.js"></script>
     <script type="module" src="animate.js"></script>
     <script type="module" src="move.js"></script>
     <script type="module" src="bgs.js"></script>
