--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
     12. fix bugs
     13. player sprite -->
     <!-- 14. enemy goomba -->
+     <!-- 15. goomba sprite -->
     
     <script type="module" src="main.js"></script>
     <!-- <script type="module" src="player.js"></script> -->
+    <script type="module" src="goomba.js"></script>
     <script type="module" src="player1.js"></script>
     <script type="module" src="animate.js"></script>
     <script type="module" src="move.js"></script>
     <script type="module" src="bgs.js"></script>
-    <script type="module" src="goomba.js"></script>
 </body>
 </html>
