goomba move 2 sides

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     12. fix bugs
     13. player sprite -->
     <!-- 14. enemy goomba -->
-     <!-- 15. goomba sprite -->
+    <!-- 15. goomba sprite -->
+    <!-- 16. goomba walk 2 sides -->
+    
     
     <script type="module" src="main.js"></script>
     <!-- <script type="module" src="player.js"></script> -->
